Fix whitespace under image issue

--- a/pulse-300x600/sass/global.scss
+++ b/pulse-300x600/sass/global.scss
@@ -93,6 +93,10 @@
     width: auto;
 }
 
+.pulse-article-logo img {
+    display: block;
+}
+
 .pulse-article-logo-sm { 
     position: relative;
     top: -2px;
